objects/Recruitment_Campaign2__c.object
<CustomObject>
    <label>Recruitment Campaign</label>
    <nameField>
        <label>Recruitment Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruitment Campaigns</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Poste__c</fullName>
        <label>Poste</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RcUrl__c</fullName>
        <defaultValue>&apos;https://resourceful-impala-vb4srp-dev-ed.trailblaze.my.site.com/s/candidate?Id=&apos; + TEXT(VALUE($RecordType.Id ))</defaultValue>
        <label>RcUrl</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seniority__c</fullName>
        <label>Seniority</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Request__c</fullName>
        <label>Job Request</label>
        <referenceTo>Job_Request1__c</referenceTo>
        <relationshipLabel>Recruitment Campaigns</relationshipLabel>
        <relationshipName>Recruitment_Campaigns</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Recruitment_sites__c</fullName>
        <label>Recruitment sites</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Linkedin</fullName>
                    <default>true</default>
                    <label>Linkedin</label>
                </value>
                <value>
                    <fullName>recruitment_agency</fullName>
                    <label>Recruitment agency + Linkedin</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <recordTypes>
        <fullName>recruitmentCampaign</fullName>
        <active>true</active>
        <label>recruitmentCampaign</label>
    </recordTypes>
    <validationRules>
        <fullName>DeadlineRule</fullName>
        <active>true</active>
        <errorConditionFormula>TODAY() &gt; Deadline__c</errorConditionFormula>
        <errorDisplayField>Deadline__c</errorDisplayField>
        <errorMessage>You can&apos;t create recruitment campagin with an old deadline</errorMessage>
    </validationRules>
</CustomObject>